--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -2,4 +2,14 @@ body {
   background: black;
   margin: 0 auto;
   position: relative;
+  scale: 1;
+
+  @media(max-width: 1000px) {
+    scale: 0.8;
+  }
+
+  @media(max-width: 768px) {
+    scale:0.5;
+  }
+
 }
