--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,7 +1,20 @@
+html {
+  font-size: 16px;
+
+  @media(max-width: 768px) {
+    font-size: 14px
+  }
+
+  @media(max-width: 480px) {
+    font-size: 12px;
+  }
+}
+
 body {
   background: black;
   margin: 0 auto;
   position: relative;
   background: $background;
   font-family: "Bricolage Grotesque";
+
 }
