add new passes, add seo, add mode switching

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -245,6 +245,7 @@
 
     img {
         border-style: none; /* Remove border when inside `a` element in IE 8/9/10 */
+        display: inline-block;
     }
 
     /* Add the correct vertical alignment in Chrome, Firefox, and Opera */
