rework landing page, change color scheme, enhance coor pickers

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -14,7 +14,7 @@ body {
   background: black;
   margin: 0 auto;
   position: relative;
-  background: $background;
+  background: $base;
   font-family: "Bricolage Grotesque";
 
 }
