--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -31,6 +31,10 @@ $secondary-80: rgba($secondary, 0.8);
   text-decoration: none;
   border-radius: $border-radius;
 
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
   &:hover {
     background: $white;
     color: $highlight;
