--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,6 +1,6 @@
-$base: #FCF5E5;
-$text: #00034C;
-$active: #06132F;
+$base: #C7D5E2;
+$text: #3111B9;
+$active: #FF4C00;
 $text-active: #fff;
 
 $huge: 1600px;
