add progressive blur

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -44,3 +44,36 @@ $small: 420px;
   line-height: 135%;
   font-weight: 400;
 }
+
+@mixin code {
+    font-style: normal;
+    line-height: 135%;
+    font-weight: 400;
+
+    pre {
+      background-color: #D1D1D0;
+      overflow: auto;
+      font-family: 'Monaco', monospace;
+      padding: 0 1em;
+    }
+
+    code {
+      font-family: 'Monaco', monospace;
+      font-size: 0.618rem;
+      line-height: 100%;
+      background-color: #eee;
+      padding: 0.2em;
+      letter-spacing: -0.05em;
+      word-break: normal;
+      border-radius: 5px;
+  }
+
+    pre code {
+      border: none;
+      background: none;
+      font-size: 0.618rem * 0.875;
+      line-height: 1em;
+      letter-spacing: normal;
+      word-break: break-all;
+  }
+}
