--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,284 +1,412 @@
+*,
+::before,
+::after {
+    box-sizing: border-box;
+    /* 1 */
+    border-width: 0;
+    /* 2 */
+    border-style: solid;
+    /* 2 */
+    border-color: #e5e7eb;
+    /* 2 */
+}
 
+/*
+1. Use a consistent sensible line-height in all browsers.
+2. Prevent adjustments of font size after orientation changes in iOS.
+3. Use a more readable tab size.
+4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
+*/
 
+html {
+    line-height: 1.5;
+    /* 1 */
+    -webkit-text-size-adjust: 100%;
+    /* 2 */
+    -moz-tab-size: 4;
+    /* 3 */
+    -o-tab-size: 4;
+    tab-size: 4;
+    /* 3 */
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    /* 4 */
+    font-feature-settings: normal;
+    /* 5 */
+    scroll-behavior: smooth;
+}
 
-    /* # =================================================================
-       # Global selectors
-       # ================================================================= */
+/*
+1. Remove the margin in all browsers.
+2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+*/
 
-    html {
-        box-sizing: border-box;
-        overflow-y: scroll; /* All browsers without overlaying scrollbars */
-        -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS */
-        word-break: normal;
-        -moz-tab-size: 4;
-        tab-size: 4;
-    }
+body {
+    margin: 0;
+    /* 1 */
+    line-height: inherit;
+    /* 2 */
+    scroll-behavior: smooth;
+}
 
-    *,
-    ::before,
-    ::after {
-        background-repeat: no-repeat; /* Set `background-repeat: no-repeat` to all elements and pseudo elements */
-        box-sizing: inherit;
-    }
+/*
+1. Add the correct height in Firefox.
+2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+3. Ensure horizontal rules are visible by default.
+*/
 
-    ::before,
-    ::after {
-        text-decoration: inherit; /* Inherit text-decoration and vertical align to ::before and ::after pseudo elements */
-        vertical-align: inherit;
-    }
+hr {
+    height: 0;
+    /* 1 */
+    color: inherit;
+    /* 2 */
+    border-top-width: 1px;
+    /* 3 */
+}
 
-    * {
-        padding: 0; /* Reset `padding` and `margin` of all elements */
-        margin: 0;
-    }
+/*
+Add the correct text decoration in Chrome, Edge, and Safari.
+*/
 
-    /* # =================================================================
-       # General elements
-       # ================================================================= */
+abbr:where([title]) {
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted;
+}
 
-    hr {
-        overflow: visible; /* Show the overflow in Edge and IE */
-        height: 0; /* Add the correct box sizing in Firefox */
-    }
+/*
+Remove the default font size and weight for headings.
+*/
 
-    details,
-    main {
-        display: block; /* Render the `main` element consistently in IE. */
-    }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: inherit;
+    font-weight: inherit;
+}
 
-    summary {
-        display: list-item; /* Add the correct display in all browsers */
-    }
+/*
+Reset links to optimize for opt-in styling instead of opt-out.
+*/
 
-    small {
-        font-size: 80%; /* Set font-size to 80% in `small` elements */
-    }
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
 
-    [hidden] {
-        display: none; /* Add the correct display in IE */
-    }
+/*
+Add the correct font weight in Edge and Safari.
+*/
 
-    abbr[title] {
-        border-bottom: none; /* Remove the bottom border in Chrome 57 */
-        /* Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari */
-        text-decoration: underline;
-        text-decoration: underline dotted;
-    }
+b,
+strong {
+    font-weight: bolder;
+}
 
-    a {
-        background-color: transparent; /* Remove the gray background on active links in IE 10 */
-    }
+/*
+1. Use the user's configured `mono` font family by default.
+2. Correct the odd `em` font sizing in all browsers.
+*/
 
-    a:active,
-    a:hover {
-        outline-width: 0; /* Remove the outline when hovering in all browsers */
-    }
+code,
+kbd,
+samp,
+pre {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+    /* 1 */
+    font-size: 1em;
+    /* 2 */
+}
 
-    code,
-    kbd,
-    pre,
-    samp {
-        font-family: monospace, monospace; /* Specify the font family of code elements */
-    }
+/*
+Add the correct font size in all browsers.
+*/
 
-    pre {
-        font-size: 1em; /* Correct the odd `em` font sizing in all browsers */
-    }
+small {
+    font-size: 80%;
+}
 
-    b,
-    strong {
-        font-weight: bolder; /* Add the correct font weight in Chrome, Edge, and Safari */
-    }
+/*
+Prevent `sub` and `sup` elements from affecting the line height in all browsers.
+*/
 
-    /* https://gist.github.com/unruthless/413930 */
-    sub,
-    sup {
-        font-size: 75%;
-        line-height: 0;
-        position: relative;
-        vertical-align: baseline;
-    }
+sub,
+sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+}
 
-    sub {
-        bottom: -0.25em;
-    }
+sub {
+    bottom: -0.25em;
+}
 
-    sup {
-        top: -0.5em;
-    }
+sup {
+    top: -0.5em;
+}
 
-    /* # =================================================================
-       # Forms
-       # ================================================================= */
+/*
+1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+3. Remove gaps between table borders by default.
+*/
 
-    input {
-        border-radius: 0;
-    }
+table {
+    text-indent: 0;
+    /* 1 */
+    border-color: inherit;
+    /* 2 */
+    border-collapse: collapse;
+    /* 3 */
+}
 
-    /* Replace pointer cursor in disabled elements */
-    [disabled] {
-        cursor: default;
-    }
+/*
+1. Change the font styles in all browsers.
+2. Remove the margin in Firefox and Safari.
+3. Remove default padding in all browsers.
+*/
 
-    [type="number"]::-webkit-inner-spin-button,
-    [type="number"]::-webkit-outer-spin-button {
-        height: auto; /* Correct the cursor style of increment and decrement buttons in Chrome */
-    }
+button,
+input,
+optgroup,
+select,
+textarea {
+    font-family: inherit;
+    /* 1 */
+    font-size: 100%;
+    /* 1 */
+    font-weight: inherit;
+    /* 1 */
+    line-height: inherit;
+    /* 1 */
+    color: inherit;
+    /* 1 */
+    margin: 0;
+    /* 2 */
+    padding: 0;
+    /* 3 */
+}
 
-    [type="search"] {
-        -webkit-appearance: textfield; /* Correct the odd appearance in Chrome and Safari */
-        outline-offset: -2px; /* Correct the outline style in Safari */
-    }
+/*
+Remove the inheritance of text transform in Edge and Firefox.
+*/
 
-    [type="search"]::-webkit-search-cancel-button,
-    [type="search"]::-webkit-search-decoration {
-        -webkit-appearance: none; /* Remove the inner padding in Chrome and Safari on macOS */
-    }
+button,
+select {
+    text-transform: none;
+}
 
-    textarea {
-        overflow: auto; /* Internet Explorer 11+ */
-        resize: vertical; /* Specify textarea resizability */
-    }
+/*
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Remove default button styles.
+*/
 
-    button,
-    input,
-    optgroup,
-    select,
-    textarea {
-        font: inherit; /* Specify font inheritance of form elements */
-    }
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+    -webkit-appearance: button;
+    /* 1 */
+    background-color: transparent;
+    /* 2 */
+    background-image: none;
+    /* 2 */
+}
 
-    optgroup {
-        font-weight: bold; /* Restore the font weight unset by the previous rule */
-    }
+/*
+Use the modern Firefox focus style for all focusable elements.
+*/
 
-    button {
-        overflow: visible; /* Address `overflow` set to `hidden` in IE 8/9/10/11 */
-    }
+:-moz-focusring {
+    outline: auto;
+}
 
-    button,
-    select {
-        text-transform: none; /* Firefox 40+, Internet Explorer 11- */
-    }
+/*
+Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
+*/
 
-    /* Apply cursor pointer to button elements */
-    button,
-    [type="button"],
-    [type="reset"],
-    [type="submit"],
-    [role="button"] {
-        cursor: pointer;
-        color: inherit;
-    }
+:-moz-ui-invalid {
+    box-shadow: none;
+}
 
-    /* Remove inner padding and border in Firefox 4+ */
-    button::-moz-focus-inner,
-    [type="button"]::-moz-focus-inner,
-    [type="reset"]::-moz-focus-inner,
-    [type="submit"]::-moz-focus-inner {
-        border-style: none;
-        padding: 0;
-    }
+/*
+Add the correct vertical alignment in Chrome and Firefox.
+*/
 
-    /* Replace focus style removed in the border reset above */
-    button:-moz-focusring,
-    [type="button"]::-moz-focus-inner,
-    [type="reset"]::-moz-focus-inner,
-    [type="submit"]::-moz-focus-inner {
-        outline: 1px dotted ButtonText;
-    }
+progress {
+    vertical-align: baseline;
+}
 
-    button,
-    html [type="button"], /* Prevent a WebKit bug where (2) destroys native `audio` and `video`controls in Android 4 */
-    [type="reset"],
-    [type="submit"] {
-        -webkit-appearance: button; /* Correct the inability to style clickable types in iOS */
-    }
+/*
+Correct the cursor style of increment and decrement buttons in Safari.
+*/
 
-    /* Remove the default button styling in all browsers */
-    button,
-    input,
-    select,
-    textarea {
-        background-color: transparent;
-        border-style: none;
-    }
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+    height: auto;
+}
 
-    /* Style select like a standard input */
-    select {
-        -moz-appearance: none; /* Firefox 36+ */
-        -webkit-appearance: none; /* Chrome 41+ */
-    }
+/*
+1. Correct the odd appearance in Chrome and Safari.
+2. Correct the outline style in Safari.
+*/
 
-    select::-ms-expand {
-        display: none; /* Internet Explorer 11+ */
-    }
+[type="search"] {
+    -webkit-appearance: textfield;
+    /* 1 */
+    outline-offset: -2px;
+    /* 2 */
+}
 
-    select::-ms-value {
-        color: currentColor; /* Internet Explorer 11+ */
-    }
+/*
+Remove the inner padding in Chrome and Safari on macOS.
+*/
 
-    legend {
-        border: 0; /* Correct `color` not being inherited in IE 8/9/10/11 */
-        color: inherit; /* Correct the color inheritance from `fieldset` elements in IE */
-        display: table; /* Correct the text wrapping in Edge and IE */
-        max-width: 100%; /* Correct the text wrapping in Edge and IE */
-        white-space: normal; /* Correct the text wrapping in Edge and IE */
-        max-width: 100%; /* Correct the text wrapping in Edge 18- and IE */
-    }
+::-webkit-search-decoration {
+    -webkit-appearance: none;
+}
 
-    ::-webkit-file-upload-button {
-        /* Correct the inability to style clickable types in iOS and Safari */
-        -webkit-appearance: button;
-        color: inherit;
-        font: inherit; /* Change font properties to `inherit` in Chrome and Safari */
-    }
+/*
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Change font properties to `inherit` in Safari.
+*/
 
-    ::-ms-clear,
-    ::-ms-reveal {
-        display: none
-    }
+::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    /* 1 */
+    font: inherit;
+    /* 2 */
+}
 
-    /* # =================================================================
-       # Specify media element style
-       # ================================================================= */
+/*
+Add the correct display in Chrome and Safari.
+*/
 
-    img {
-        border-style: none; /* Remove border when inside `a` element in IE 8/9/10 */
-        display: inline-block;
-    }
+summary {
+    display: list-item;
+}
 
-    /* Add the correct vertical alignment in Chrome, Firefox, and Opera */
-    progress {
-        vertical-align: baseline;
-    }
+/*
+Removes the default spacing and border for appropriate elements.
+*/
 
-    /* # =================================================================
-       # Accessibility
-       # ================================================================= */
+blockquote,
+dl,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+figure,
+p,
+pre {
+    margin: 0;
+}
 
-    /* Hide content from screens but not screenreaders */
-    @media screen {
-        [hidden~="screen"] {
-            display: inherit;
-        }
-        [hidden~="screen"]:not(:active):not(:focus):not(:target) {
-            position: absolute !important;
-            clip: rect(0 0 0 0) !important;
-        }
-    }
+fieldset {
+    margin: 0;
+    padding: 0;
+}
 
-    /* Specify the progress cursor of updating elements */
-    [aria-busy="true"] {
-        cursor: progress;
-    }
+legend {
+    padding: 0;
+}
 
-    /* Specify the pointer cursor of trigger elements */
-    [aria-controls] {
-        cursor: pointer;
-    }
+ol,
+ul,
+menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 
-    /* Specify the unstyled cursor of disabled, not-editable, or otherwise inoperable elements */
-    [aria-disabled="true"] {
-        cursor: default;
-    }
+/*
+Prevent resizing textareas horizontally by default.
+*/
+
+textarea {
+    resize: vertical;
+}
+
+/*
+1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
+2. Set the default placeholder color to the user's configured gray 400 color.
+*/
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+    opacity: 1;
+    /* 1 */
+    color: #9ca3af;
+    /* 2 */
+}
+
+input::placeholder,
+textarea::placeholder {
+    opacity: 1;
+    /* 1 */
+    color: #9ca3af;
+    /* 2 */
+}
+
+/*
+Set the default cursor for buttons.
+*/
+
+button,
+[role="button"] {
+    cursor: pointer;
+}
+
+/*
+Make sure disabled buttons don't get the pointer cursor.
+*/
+
+:disabled {
+    cursor: default;
+}
+
+/*
+1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
+2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
+   This can trigger a poorly considered lint error in some tools but is included by design.
+*/
+
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+    display: block;
+    /* 1 */
+    vertical-align: middle;
+    /* 2 */
+}
+
+/*
+Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
+*/
+
+img,
+video {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Make elements with the HTML hidden attribute stay hidden by default */
+
+[hidden] {
+    display: none;
+}
